# market

./: .gitignore  README.md
backend/: Cargo.toml  DevSettings.toml
backend/src/: auth.rs  db.rs  filters.rs  handlers.rs  lib.rs  main.rs  models.rs
menuapi/: DevSettings.toml
menuapi/src/: auth.rs  filters.rs  handlers.rs  main.rs  models.rs
ui/: .env.development  .gitignore  README.md  package-lock.json  package.json
ui/src/: app.css  app.html  global.d.ts
ui/src/lib/components/: Header.svelte
ui/src/lib/models/: token.ts
ui/src/lib/utils/: api-client.ts  auth.ts
ui/src/routes/: __layout.svelte  index.svelte  login.svelte
