[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "^0.11.0"

# server stuff
tokio = { version = "1", features = ["full"] }
warp = "^0.3.2"
jsonapi = "^0.7.0"
serde_json = "1.0"

# database stuff
rusqlite = { version = "^0.26.3", features = ["blob"] }
ring = "^0.16.20"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
strum_macros = "^0.23.1"

# jwt stuff
hmac = "^0.12.0"
chrono = "^0.4.19"
jwt = "^0.16.0"
sha2 = "^0.10.1"

# log stuff
log = "0.4"
pretty_env_logger = "0.4"
